--- a/mods/worldgen/overworld/expanded-ecosphere.pw.toml
+++ b/mods/worldgen/overworld/expanded-ecosphere.pw.toml
@@ -1,6 +1,6 @@
 name = "William Wythers' Expanded Ecosphere"
 filename = "expanded_ecosphere-3.2.4-fabric.jar"
-side = "both"
+side = "server"
 
 [download]
 url = "https://cdn.modrinth.com/data/O1XGs7ps/versions/xrUchinI/expanded_ecosphere-3.2.4-fabric.jar"
