--- a/mods/content/applied-energistics/ae2-qol-recipes.pw.toml
+++ b/mods/content/applied-energistics/ae2-qol-recipes.pw.toml
@@ -1,6 +1,6 @@
 name = "AE2 QoL Recipes"
 filename = "ae2qolrecipes-fabric-1.18.2-1.20.x-1.2.0.jar"
-side = "both"
+side = "server"
 
 [download]
 url = "https://cdn.modrinth.com/data/K7VSm2YY/versions/TuHmLXgh/ae2qolrecipes-fabric-1.18.2-1.20.x-1.2.0.jar"
