--- a/mods/custom/nsmp-restarter.pw.toml
+++ b/mods/custom/nsmp-restarter.pw.toml
@@ -1,6 +1,6 @@
 name = "nsmp-restarter"
 filename = "nsmp-restarter-1.1.3+1.20.1-server.jar"
-side = "both"
+side = "server"
 
 [download]
 url = "https://github.com/nekosmp/nsmp-restarter/releases/download/mc1.20.1/v1.1.3/nsmp-restarter-1.1.3%2B1.20.1-server.jar"
