--- a/mods/custom/nsmp-structurefix.pw.toml
+++ b/mods/custom/nsmp-structurefix.pw.toml
@@ -1,6 +1,6 @@
 name = "nsmp-structurefix"
 filename = "nsmp-structurefix-0.2.0+1.20.1-server.jar"
-side = "both"
+side = "server"
 
 [download]
 url = "https://github.com/nekosmp/nsmp-structurefix/releases/download/mc1.20.1/v0.2.0/nsmp-structurefix-0.2.0%2B1.20.1-server.jar"
