--- a/mods/testing/part1/mns-moogs-nether-structures.pw.toml
+++ b/mods/testing/part1/mns-moogs-nether-structures.pw.toml
@@ -1,6 +1,6 @@
 name = "MNS - Moog's Nether Structures"
 filename = "mns-1.0.1-1.20-fabric.jar"
-side = "both"
+side = "server"
 
 [download]
 url = "https://cdn.modrinth.com/data/nGUXvjTa/versions/PTf5Y56P/mns-1.0.1-1.20-fabric.jar"
