--- a/mods/testing/part2/crops-love-rain.pw.toml
+++ b/mods/testing/part2/crops-love-rain.pw.toml
@@ -1,6 +1,6 @@
 name = "Crops Love Rain"
 filename = "crops_love_rain-1.4.0.jar"
-side = "both"
+side = "server"
 
 [download]
 url = "https://cdn.modrinth.com/data/cRci7UZp/versions/4jfKIA1o/crops_love_rain-1.4.0.jar"
