--- a/mods/tweaks/gameplay/bunk-beds.pw.toml
+++ b/mods/tweaks/gameplay/bunk-beds.pw.toml
@@ -1,6 +1,6 @@
 name = "Bunk Beds"
 filename = "bunk-beds-1.0.0+1.20.1.jar"
-side = "both"
+side = "server"
 
 [download]
 url = "https://cdn.modrinth.com/data/AYrOhk54/versions/v6LTIhu3/bunk-beds-1.0.0%2B1.20.1.jar"
