--- a/mods/utilities/bluemap/bluemap.pw.toml
+++ b/mods/utilities/bluemap/bluemap.pw.toml
@@ -1,6 +1,6 @@
 name = "BlueMap"
 filename = "BlueMap-5.3-fabric-1.20.jar"
-side = "both"
+side = "server"
 
 [download]
 url = "https://cdn.modrinth.com/data/swbUV1cr/versions/lHRktt6S/BlueMap-5.3-fabric-1.20.jar"
