--- a/index.toml
+++ b/index.toml
@@ -10,13 +10,44 @@ file = "config/bclib/server.json"
 file = "config/builtinservers.json"
 
 [[files]]
+file = "config/collective/checked.txt"
+
+[[files]]
 file = "config/expanded_ecosphere/config.json5"
 
 [[files]]
 file = "config/expanded_ecosphere/replace_biomes.json5.old"
 
 [[files]]
+file = "config/fancymenu/assets/logo.png"
+
+[[files]]
+file = "config/fancymenu/customizablemenus.txt"
+
+[[files]]
+file = "config/fancymenu/customization/drippy_loading_overlay_layout.txt"
+
+[[files]]
+file = "config/fancymenu/customization/options_screen_layout.txt"
+
+[[files]]
+file = "config/fancymenu/customization/title_screen_layout.txt"
+
+[[files]]
+file = "config/fancymenu/minecraftwindow/icons/icon16x16.png"
+
+[[files]]
+file = "config/fancymenu/minecraftwindow/icons/icon32x32.png"
+
+[[files]]
+file = "config/fancymenu/options.txt"
+
+[[files]]
 file = "config/paxi/datapacks/nsmp-datapack.pw.toml"
+metafile = true
+
+[[files]]
+file = "config/paxi/resourcepacks/nsmp-resourcepack.pw.toml"
 metafile = true
 
 [[files]]
@@ -152,6 +183,10 @@ metafile = true
 
 [[files]]
 file = "mods/tweaks/ui/builtin-servers.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/tweaks/ui/drippy-loading-screen.pw.toml"
 metafile = true
 
 [[files]]
