--- a/index.toml
+++ b/index.toml
@@ -206,6 +206,10 @@ file = "mods/tweaks/visual/iris.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/utilities/world-preview.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/worldgen/end/betterend.pw.toml"
 metafile = true
 
