--- a/config/expanded_ecosphere/replace_biomes.json5
+++ b/config/expanded_ecosphere/replace_biomes.json5
@@ -6,7 +6,7 @@ This config is only for replacing biomes, the main Expanded Ecosphere config is 
 */
 {
 	// Enable biome replacing
-	"enableBiomes": true,
+	"enableBiomes": false,
 	/* Enter all Expanded Ecosphere biomes that should be replaced into this map.
 	   As the key put the biome you want to replace and as value the biome you want to replace it with.
 	   Here is an example:
@@ -18,17 +18,5 @@ This config is only for replacing biomes, the main Expanded Ecosphere config is 
 	   Also on compatible mode you can only replace Expanded Ecosphere biomes and only replace them with non vanilla biomes.
 	   If a biome doesn't exist, the game will crash!
 	*/
-	"replace": {
-		"wythers:temperate_island": "minecraft:ocean",
-		"wythers:jungle_island": "minecraft:warm_ocean",
-		"wythers:tropical_island": "minecraft:warm_ocean"
-		"wythers:mushroom_island": "minecraft:warm_ocean",
-		"minecraft:mushroom_fields": "minecraft:warm_ocean",
-		"wythers:frigid_island": "minecraft:cold_ocean",
-		"wythers:cold_island": "minecraft:cold_ocean",
-		"wythers:frozen_island": "minecraft:frozen_ocean",
-		"wythers:mediterranean_island": "minecraft:lukewarm_ocean",
-		"wythers:mediterranean_island_thermal_springs": "minecraft:lukewarm_ocean",
-		"wythers:desert_island": "minecraft:lukewarm_ocean",
-	}
+	"replace": {}
 }
