--- a/index.toml
+++ b/index.toml
@@ -198,6 +198,10 @@ file = "mods/tweaks/ui/modmenu.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/tweaks/visual/distanthorizons.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/tweaks/visual/iris.pw.toml"
 metafile = true
 
