--- a/index.toml
+++ b/index.toml
@@ -1,14 +1,14 @@
 hash-format = "sha256"
 
 [[files]]
+file = "bluemap/postgresql.pw.toml"
+metafile = true
+
+[[files]]
 file = "config/bclib/client.json"
 
 [[files]]
 file = "config/bclib/server.json"
-
-[[files]]
-file = "config/bluemap/postgresql.pw.toml"
-metafile = true
 
 [[files]]
 file = "config/builtinservers.json"
