--- a/shaderpacks/complementary-unbound.pw.toml
+++ b/shaderpacks/complementary-unbound.pw.toml
@@ -1,16 +1,16 @@
 name = "Complementary Shaders - Unbound"
-filename = "ComplementaryUnbound_r5.2.2.zip"
+filename = "ComplementaryUnbound_r5.3.zip"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/R6NEzAwj/versions/RMaZ3tSJ/ComplementaryUnbound_r5.2.2.zip"
+url = "https://cdn.modrinth.com/data/R6NEzAwj/versions/CVu3AGAd/ComplementaryUnbound_r5.3.zip"
 hash-format = "sha1"
-hash = "f0c0cbd2059b7a464b9e0f061ddfa6f0980849e1"
+hash = "9474a8bc55e4f37786568ae532e4336aab72ba42"
 
 [update]
 [update.modrinth]
 mod-id = "R6NEzAwj"
-version = "RMaZ3tSJ"
+version = "CVu3AGAd"
 
 [option]
 optional = true
