--- a/index.toml
+++ b/index.toml
@@ -126,6 +126,18 @@ file = "mods/content/exposure.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/content/hexcasting/hexcasting.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/hexcasting/hexdim.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/hexcasting/hextweaks.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/content/silly/moyai.pw.toml"
 metafile = true
 
