--- a/index.toml
+++ b/index.toml
@@ -350,6 +350,10 @@ file = "mods/libraries/resourceful-lib.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/libraries/satin-api.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/libraries/sushi-bar.pw.toml"
 metafile = true
 
