--- a/index.toml
+++ b/index.toml
@@ -321,6 +321,10 @@ file = "mods/libraries/moonlight.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/libraries/mru.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/libraries/owo-lib.pw.toml"
 metafile = true
 
@@ -430,6 +434,14 @@ metafile = true
 
 [[files]]
 file = "mods/testing/surveyor.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/tweaks/audio/dynamicsurroundingsfabric.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/tweaks/audio/sound.pw.toml"
 metafile = true
 
 [[files]]
