--- a/mods/tweaks/emi/emi-loot.pw.toml
+++ b/mods/tweaks/emi/emi-loot.pw.toml
@@ -1,13 +1,13 @@
 name = "EMI Loot"
-filename = "emi_loot-0.7.3+1.20.1+fabric.jar"
+filename = "emi_loot-0.7.4+1.20.1+fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/qbbO7Jns/versions/zOC2wmIR/emi_loot-0.7.3%2B1.20.1%2Bfabric.jar"
+url = "https://cdn.modrinth.com/data/qbbO7Jns/versions/HsRd2NvY/emi_loot-0.7.4%2B1.20.1%2Bfabric.jar"
 hash-format = "sha1"
-hash = "a1cfab32e679b9d7d7a134bd8a9de72314f7720c"
+hash = "12d51d5a0fbee92cc45432fcc7af456c95fd4668"
 
 [update]
 [update.modrinth]
 mod-id = "qbbO7Jns"
-version = "zOC2wmIR"
+version = "HsRd2NvY"
